--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,5 +1,7 @@
 // Colors
 // ---------------------------------
+$color-corduroy:                    #37514b;
+$color-nero:                        #171717;
 
 // Default
 
@@ -23,11 +25,7 @@ $black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0
 // переменная используемая в html для подключения скейлинга
 $fz-default:                        16px;
 
-// у некоторых шрифтов в ios возникают проблемы с символом рубля
-// https://www.artlebedev.ru/kovodstvo/sections/159/#13
-$ff-rouble:                         "Rouble", "Arial", sans-serif;
-
-$ff-placeholder:                    "Placeholder", "Arial", sans-serif;
+$ff-montserrat:                    "Montserrat", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
