feat: add styles

--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -15,9 +15,9 @@ html {
   font-style: normal;
   font-weight: 400;
   font-size: $fz-default;
-  line-height: 24px;
+  line-height: 1.2;
   font-family: $ff-montserrat;
-  color: $color-default-black;
+  color: $color-nero;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
