--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,23 +1,30 @@
 .btn {
   display: inline-flex;
-  padding: 10px 20px;
+  padding: 16px 30px;
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.2;
 
   color: $color-default-white;
 
-  background-color: $color-neon-blue;
+  background-color: $color-corduroy;
   border: none;
+  border-radius: 20px;
   cursor: pointer;
 
   transition: opacity $trans-default;
-
-  &--red {
-    background-color: $color-torch-red;
-  }
 
   &:disabled {
     opacity: 0.5;
 
     pointer-events: none;
+  }
+
+  &--secondary {
+    background-color: $color-default-white;
+    border: 1px solid $color-corduroy;
+    color: $color-corduroy;
   }
 
   @include hover-focus {
