--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,18 +1,21 @@
 .container {
   width: 100%;
-  max-width: 1920px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 40px;
 
-  @include vp-1439 {
-    padding: 0 32px;
+  &--disable {
+    max-width: unset;
+    padding: 0;
+    margin: 0;
   }
 
-  @include vp-1023 {
-    padding: 0 24px;
+  @include vp-1279 {
+    padding: 0 27px;
   }
 
   @include vp-767 {
-    padding: 0 16px;
+    padding: 0 22px;
   }
+
 }
