--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -16,11 +16,12 @@
 
   @include vp-767 {
     grid-template-columns: 1fr;
+    max-width: 455px;
   }
 }
 
 .intro__title {
-  grid-column: 1 / -1 ;
+  grid-column: 1 / -1;
 
   margin: 0;
   margin-bottom: 40px;
