--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -44,6 +44,12 @@
   }
 }
 
+@mixin vp-1440 {
+  @media (max-width: $vp-1440) {
+    @content;
+  }
+}
+
 @mixin vp-1439 {
   @media (max-width: ($vp-1440 - 1px)) {
     @content;
@@ -52,6 +58,12 @@
 
 @mixin vp-1279 {
   @media (max-width: ($vp-1280 - 1px)) {
+    @content;
+  }
+}
+
+@mixin vp-1110 {
+  @media (max-width: 1110px) {
     @content;
   }
 }
