--- a/css/style.css
+++ b/css/style.css
@@ -1302,7 +1302,7 @@ button,
     transition: opacity 0.3s ease;
   }
 
-  .footer__link:hover:not(.focus-visible) {
+  .footer__social-link:hover:not(.focus-visible) {
     opacity: 0.8;
     -webkit-transition: opacity 0.3s ease;
     transition: opacity 0.3s ease;
